--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -114,6 +114,11 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-config]]
 === Userland Configuration Changes
 
+A new `kdc_restart` variable is available that manages man:kdc[8] (or `krb5kdc`) under man:daemon[8].
+Set `kdc_restart="YES"` in man:rc.conf[5] to auto restart kdc on abnormal termination.
+Set `kdc_restart_delay="N"` to the number of seconds to delay before restarting the kdc.
+gitref:abc4b3088941[repository=src]
+
 By default, changes shown in email by the man:periodic[8] facility from the `daily` scripts show less context than before to reduce the size of the output.
 The behavior can be controlled by the `daily_diff_flags` variable in man:periodic.conf[5].
 Similarly, the changes shown by the security scripts show less context than previously, controlled by the `security_status_diff_flags` variable in man:periodic.conf[5].
@@ -145,9 +150,6 @@ OpenSSH has been upgraded to version 9.7p1.
 Full release notes are at https://www.openssh.com/txt/release-9.7[] and https://www.openssh.com/txt/release-9.6[] .
 gitref:a25789646d71[repository=src], gitref:464fa66f639b[repository=src] (Sponsored by The FreeBSD Foundation)
 
-The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
-gitref:58ae50f31e95[repository=src]
-
 The man:usbconfig[8] utility now reads the descriptions of usb vendor and products from [.filename]#/usr/share/misc/usb_vendors# when available, similar to what man:pciconf[8] does.
 gitref:7b9a772f9f64[repository=src]
 
@@ -162,6 +164,13 @@ gitref:90a5e985e5f4[repository=src]
 
 The man:libarchive[3] library has been upgraded to version 3.7.4.
 gitref:8774c92e32b2[repository=src]
+
+The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
+gitref:58ae50f31e95[repository=src]
+
+The man:unbound[8] resolver has been upgraded to version 1.20.0, and addresses "`The DNSBomb`" vulnerability, CVE-2024-33655.
+gitref:dcde37c4170b[repository=src]
+
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -199,12 +208,26 @@ This section covers changes and additions to devices and device drivers since {r
 [[drivers-device]]
 === Device Drivers
 
+A driver is available for man:ice[4] Ethernet network controllers in the Intel E800 series, which support 100 Gb/s operation.
+It was upgraded to version 1.39.13-k.
+gitref:71d104536b51[repository=src] gitref:f6de0a7c94e9[repository=src] (Sponsored by Intel Corporation)
+
+Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
+(Sponsored by The FreeBSD Foundation)
+
 Multiple PCI MCFG regions are now supported on amd64 and i386, allowing PCI configuration space access for domains (segments) other than 0.
 gitref:4b5f64408804[repository=src]
 
 The man:smsc[4] Ethernet driver can now fetch the value of `smsc95xx.macaddr` passed by some Raspberry Pi models and use it for the MAC address.
 It always uses a stable MAC address even if there is no address in EEPROM.
 gitref:028e4c6548e4[repository=src]
+
+The `snd_clone` framework has been removed from the sound subsystem, including related sysctls, simplifying the system.
+The per-channel nodes ([.filename]#/dev/dspX.Y#) are no longer created, just the primary device ([.filename]#/dev/dspX#).
+gitref:e6c51f6db8d7[repository=src] (Sponsored by The FreeBSD Foundation)
+
+Hot unlugging of sound devices is now handled, closing the device immediately.
+gitref:d692c314d29a[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -279,6 +302,16 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+ARP (man:arp[4]) support for 802-standard networks has been restored; it had been accidentally removd with FDDI support.
+(This is different than the Ethernet standard encapsulation.)
+gitref:d776dd5fbd48[repository=src]
+
+It is possible to build a kernel with IPv6 support (INET6) without IPv4 (INET).
+gitref:6df9fa1c6b83[repository=src] and others
+
+The netgraph man:ng_ipfw[4] module no longer truncates cookies to 16 bits, allowing a full 32 bits.
+gitref:dadf64c5586e[repository=src]
+
 [[hardware]]
 == Hardware Support
 
@@ -296,6 +329,9 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 
 [[man-pages]]
 === Man Pages
+
+A new man:network[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
+gitref:39f92a4c4c49[repository=src]
 
 [[ports]]
 == Ports Collection and Package Infrastructure
