--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -132,6 +132,10 @@ A command-line option is available to disable use of a separate dataset.
 ZFS encryption is also available.
 gitref:516009ce8d38[repository=src]
 
+Audio now supports asynchronous device detach.
+This greatly simplifies hot plugging and unplugging of things such as USB headsets, and eases use of PulseAudio in cases that require operating system sleep and wake (suspend and resume).
+gitref:d692c314d29a[repository=src]
+
 The man:date[1] program now supports nanoseconds.
 For example: `date -Ins` prints "2024-04-22T12:20:28,763742224+02:00" and `date +%N` prints "415050400".
 gitref:eeb04a736cb9[repository=src]
