--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -226,7 +226,7 @@ The `snd_clone` framework has been removed from the sound subsystem, including r
 The per-channel nodes ([.filename]#/dev/dspX.Y#) are no longer created, just the primary device ([.filename]#/dev/dspX#).
 gitref:e6c51f6db8d7[repository=src] (Sponsored by The FreeBSD Foundation)
 
-Hot unlugging of sound devices is now handled, closing the device immediately.
+Hot unplugging of sound devices is now handled, closing the device immediately.
 gitref:d692c314d29a[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[drivers-removals]]
@@ -302,7 +302,7 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
-ARP (man:arp[4]) support for 802-standard networks has been restored; it had been accidentally removd with FDDI support.
+ARP (man:arp[4]) support for 802-standard networks has been restored; it had been accidentally removed with FDDI support.
 (This is different than the Ethernet standard encapsulation.)
 gitref:d776dd5fbd48[repository=src]
 
