--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -171,7 +171,6 @@ gitref:58ae50f31e95[repository=src]
 The man:unbound[8] resolver has been upgraded to version 1.20.0, and addresses "`The DNSBomb`" vulnerability, CVE-2024-33655.
 gitref:dcde37c4170b[repository=src]
 
-
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
@@ -226,7 +225,8 @@ The `snd_clone` framework has been removed from the sound subsystem, including r
 The per-channel nodes ([.filename]#/dev/dspX.Y#) are no longer created, just the primary device ([.filename]#/dev/dspX#).
 gitref:e6c51f6db8d7[repository=src] (Sponsored by The FreeBSD Foundation)
 
-Hot unplugging of sound devices is now handled, closing the device immediately.
+Audio now supports asynchronous device detach.
+This greatly simplifies hot plugging and unplugging of things such as USB headsets, and eases use of PulseAudio in cases that require operating system sleep and wake (suspend and resume).
 gitref:d692c314d29a[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[drivers-removals]]
