--- a/website/content/en/releases/14.1R/schedule.adoc
+++ b/website/content/en/releases/14.1R/schedule.adoc
@@ -37,7 +37,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA1 builds begin |3 May 2024 |3 May 2024 |First beta test snapshot.
 |BETA2 builds begin |10 May 2024 |10 May 2024 |Second beta test snapshot.
 |BETA3 builds begin |17 May 2024 |17 May 2024 |Third beta test snapshot.
-|RC1 builds begin |24 May 2024 |- |First release candidate.
+|RC1 builds begin |24 May 2024 |25 May 2024 |First release candidate.
 |RC2 builds begin |31 May 2024 |- |Second release candidate.
 |RC3 builds begin |7 June 2024 |- |Third release candidate.
 |RELEASE builds begin |14 June 2024 |- |{localRel}-RELEASE builds begin.
