--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -188,6 +188,16 @@ Many string and memory operations in the C library now use SIMD (single instruct
 There is now a much better implementation of the 128-bit `tgammal` function in the math library, man:math[3], on platforms that support it.
 gitref:8df6c930c151[repository=src]
 
+[[cloud]]
+== Cloud Support
+
+This section covers changes in support for cloud environments.
+
+{releaseCurrent} supports cloudinit, including the `nuageinit` startup script and support for a `config-drive` partition.
+It is compatible with OpenStack and many hosting facilities.
+See the https://cloud-init.io[cloud-init] web site and the commit messages,
+gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. (Sponsored by OVHCloud)
+
 [[kernel]]
 == Kernel
 
