--- a/website/content/en/internal/machines.adoc
+++ b/website/content/en/internal/machines.adoc
@@ -18,10 +18,10 @@ These systems are available for FreeBSD developer / committer use. Reference sys
 |===
 |Host |OS |Type |Purpose
 |freefall |15-CURRENT |amd64 |Shell Logins.
-|ref[15\|14\|13\|12]-amd64 |X-STABLE |amd64 |Reference machine for general testing and Ports building.
-|ref[15\|14\|13\|12]-i386 |X-STABLE |i386 |Reference machine for general testing and Ports building.
-|ref[15\|14\|13\|12]-aarch64 |X-STABLE |arm64\|aarch64 |Reference machine for general testing and Ports building.
-|universe[15\|14\|13\|12][a\|b] |X-STABLE |amd64 |Universe build machine for fast, large scale compiling.
+|ref[15\|14\|13]-amd64 |X-STABLE |amd64 |Reference machine for general testing and Ports building.
+|ref[15\|14\|13]-i386 |X-STABLE |i386 |Reference machine for general testing and Ports building.
+|ref[15\|14\|13]-aarch64 |X-STABLE |arm64\|aarch64 |Reference machine for general testing and Ports building.
+|universe[15\|14\|13][a\|b] |X-STABLE |amd64 |Universe build machine for fast, large scale compiling.
 |===
 
 Machines are generally connected at 1Gbit/sec full-duplex to a dedicated switch with redundant gigabit uplinks. All systems have logged serial consoles and remote power management.
